# Voicel

./: .env.example  .gitignore  README.md  alpha.py  pyproject.toml
server/: server.py
src/: config.py  main.py  test.py  version_2.py
